[package]
name = "tonic-tracing-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.7.1", features = ["tls"] }
prost = "0.10"
hyper = "0.14"
async-trait = "0.1.40"
tracing = { version = "0.1.14", features = ["log", "attributes"] }
tower = { version = "0.4", features = ["discover"] }
tower-service = "0.3"
tower-layer = "0.3.1"
http = "0.2.1"
percent-encoding = "2.1.0"
tower-http = { version = "0.2.5", features = ["trace"] }
http-body = "0.4.4"

[build-dependencies]
tonic-build = { version = "0.7", features = ["prost"]  }
